# ecom_parser

./: README.md  categories.csv  pyproject.toml  scrapy.cfg
ecom_parser/: settings.py
ecom_parser/models/: product.py
ecom_parser/spiders/apteka/: apteka.py  serializers.py  utils.py
ecom_parser/tests/: conftest.py
ecom_parser/tests/spiders/apteka/: test_spider.py
ecom_parser/tests/spiders/apteka/responses/: first_page_products_list_response.html  last_page_products_list_response.html
